css/styles.css
/* ... */
nav #nav-ul-wrapper a:hover {
  transform: rotateX(33deg);
}

nav #nav-ul-wrapper a::before {
  position: absolute;
  inset: 0;

  content: '';

  background: linear-gradient(to right, rgba(255, 0, 0, 0.333), rgba(0 , 255, 0, 0.333), rgba(0, 0, 255, 0.333));
  border-top-left-radius: 30px;
  border-bottom-left-radius: 30px;
  box-shadow: 0 0 8px 3px var(--clr-body-accent-nature-green);
  opacity: 30%;
}

nav #nav-ul-wrapper a:hover::before {
  opacity: 1;
}

nav #nav-ul-wrapper li:nth-of-type(4) a {
  border-bottom-right-radius: 18px;
}

nav #nav-ul-wrapper li:nth-of-type(4) a::before {
  border-bottom-right-radius: 18px;
}

#about {
  position: relative;
}

#about #avatar-container {
  display: grid;
  justify-content: center;

  margin-bottom: 33px;
  padding: 0 55px;
  
  width: 100%;
}

#about #avatar-overflow-container {
  position: relative;

  border-radius: 50%;
  margin: 0 auto;
  overflow: hidden;
  transition: all 0.3s ease-in;
}

/* rgbCyclone360 */
#about #avatar-overflow-container::before {
  position: absolute;
  inset: 0;

  content: '';

  background: linear-gradient(to bottom right, red, green, blue);
  height: 100%;
  opacity: 18%;
  overflow: hidden;
  width: 100%;


  -webkit-user-select: none; /* Safari */        
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */

  animation: three-sixty 0.333s linear infinite; 
  -webkit-animation: three-sixty 0.333s linear infinite;
}

#about #avatar-overflow-container img {
  cursor: pointer;

  filter: sepia(1) brightness(0.7);
  transition: all 0.3s ease-in;
  border-radius: 50%;

  animation: avatar-cyclone 8s linear forwards;
  -webkit-animation: avatar-cyclone 8s linear forwards;
}

#about #avatar-overflow-container img:hover {
  filter: sepia(0) brightness(1) saturate(0.55);
}

#about #avatar-overflow-container img:active {
  animation: avatar-cyclone-active 0.8s ease-in forwards;
  /* transform: rotate(1080deg); */
}

#about .emoji-eyes {
  display: inline-block;
  transform: scale(1.1);
  animation: emoji-eyes 3s linear infinite alternate;
}

#about #wave {
  display: inline-block;
  animation: wave 0.3s linear alternate infinite;
  -webkit-animation: wave 0.3s linear alternate infinite;
}

#about .nyc {
  font-family: bookman-jf-pro, serif;
  font-style: italic;
  word-spacing: 7px;
  font-feature-settings: unset;
}

#about .nyc-glyph {
  /* use the first available swash character (add 2 after to use the second) */
  font-feature-settings:"swsh";
}

#about .jkc-text {
  font-size: var(--fs-h3);
  font-weight: bold;
}

#about .cloud {
  display: inline-block;
  animation: cloud 0.5s linear alternate infinite;
  -webkit-animation: cloud 0.5s linear alternate infinite;
  

}

#about #stack {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(75px, 1fr));
  width: min(500px, 100%);
  margin-inline:auto;
  padding-top: 33px;
}

#about .tech-icon {
  display: grid;
  text-align: center; 
}

#about .tech-icon:hover > i {
  animation: jiggle 333ms linear forwards;
  -webkit-animation: jiggle 333ms linear forwards;
}

#about .icon {
  font-size: 2.8rem;
}

#about .icon-name {
  font-size: var(--fs-icon-name);
  transition: transform 333ms ease-in;
}

#about .tech-icon:hover > .icon-name {
  transform: translateY(8px) scale(1.3);
}

#projects .logo-stack {
  position: relative;

  cursor: pointer;
  margin: 0 15vw 33px 15vw;

  -webkit-user-select: none; /* Safari */        
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */
}

#projects .logo-stack .stack-still {
  transition: all 0.1s ease-out;
}

#projects .logo-stack .stack-gif {
  position: absolute;
  top: 50%;

  width: 100%;

  
  opacity: 0;
  transform: scale(0) translateY(-50%);
  transition: all 100ms ease-in;
}

#projects .logo-stack:hover > .stack-still {
  transform: scale(0);
}

#projects .logo-stack:hover > .stack-gif {
  opacity: 1;
  transform: scale(1) translateY(-50%);
}

#projects .text-content-container p {
  padding-top: none;
}

#projects p {
  font-size: var(--fs-body);
  text-align: center;
  margin-bottom: 33px;
}

/* projectBoxShadow */
#projects .project-stack .project-stack-psuedo {
  position: relative; 

  border-radius: inherit;

  transition: 0.38s ease-in-out;
}

#projects .project-stack .project-stack-psuedo:hover {
  transform: scale(1.03);
}

#projects .project-stack .project-stack-psuedo::before {
  position: absolute;
  inset: 0;
  
  content: '';

  box-shadow: 0 15px 30px 1px black;
  border-radius: inherit;

  opacity: 0;
  
  transition: all 0.38s ease-in-out;
}

#projects .project-stack .project-stack-psuedo:hover::before {
  border-radius: inherit;
  opacity: 1;
}

#projects .project-stack .gif-container {
  position: relative;
  
  border-radius: inherit;
  cursor: pointer;

  z-index: 1;
}

#projects .project-stack .gif-container > img {
  border-radius: inherit;
  width: 100%;
  height: 100%;
  
  transition: all 0.38s ease-in-out;
}

#projects .project-stack .btn-container {
  position: absolute;
  inset: 0;
  
  display: grid;
  place-content: center;
  
  background: linear-gradient(to bottom right, black, rgb(33, 33, 33), black);
  border-radius: inherit;
  transition: all 0.38s ease-in-out;
  
  opacity: 0;
  visibility: hidden;

  z-index: 2;
}

#projects .project-stack .modal-trigger.open ~ .btn-container {
  opacity: 1;
  visibility: visible;
}

#projects .project-stack .cyclone-grid {
  display: grid;
  place-items: center;

  grid-template-columns: repeat(7, 1fr);
  grid-template-rows: repeat(5, 1fr);
  
  transform: scale(0.8);
}
/* ... */

